<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.sqh.market.activity.DetailsActivity">



    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <SearchView
            android:id="@+id/postsearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:queryHint="@string/home_search" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginLeft="0dp"

        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/postimg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/post1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/posttext2"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/posttext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postname1"
                android:textColor="@color/main_menu_textcolor"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/posttext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postname2"
                android:textColor="@color/white_pressed"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="1dip"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white" />

            <View
                android:layout_width="1dip"
                android:layout_height="45dp"


                android:background="#E0E0E0" />


        </LinearLayout>

        <Button
            android:id="@+id/postbutton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"

            android:text="@string/postbutton1" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <LinearLayout
        android:layout_width="wrap_content"

        android:layout_height="75dp"
        android:layout_marginLeft="0dp"
        android:background="@drawable/blackground"

        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/post2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"></TextView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postname3"
                android:textColor="@color/main_menu_textcolor"
                android:textSize="18sp"></TextView>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/postname2"
                android:textColor="@color/white_pressed"
                android:textSize="16sp"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="1dip"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white" />

            <View
                android:layout_width="1dip"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:background="#E0E0E0" />

            <View
                android:layout_width="1dip"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/postbutton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:background="@color/white"

            android:text="@string/postbutton1" />


    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#E0E0E0" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="496dp"
        app:srcCompat="@drawable/post5" />






</LinearLayout>
